pylistener/static/module.css
body {
    width: 100%;
}

body p {
    text-align: center;
}

body h1 {
    text-align: center;
}

nav {
    background-color: #009999;
    width: 100%;
    height: 80px;
    margin-bottom: 20px;
    display: inline-block;
}

nav ul li {
    padding-left: 25px;
    padding-top: 40%;
}

.login_div {
    text-align: left;
    padding-top: 25px;
}

.manage_icon {
    float: right;
    padding-right: 30px;
}

.main_container {
    text-align: center;
    }

.main_container ul {
    display: inline-block;
    margin: auto;
    padding: 0;
/*     For IE, the outcast
*/  zoom:1;
    display: inline;
    }


.list_item {
    display: inline-block;
    width: 240px;
    height: 240px;
    padding: 20px;
    background-color: #97D0A7;
    border-radius: 10px;
    margin-top: 5px;
    margin-right: 5px;
    margin-left: 5px;
    line-height: 60px;
}

.list_item img{
    display: block;
    max-height: 200px;
    max-width: 200px;
    width: auto;
    height: auto;
    vertical-align: bottom;
    margin: auto;
}

.list_item p {
    text-align: center;
    color: black;
}

.list_item a {
    text-decoration: none;
    height: 100%;
    vertical-align: bottom;
}

.link_item {
    display: inline-block;
}

.del_contact a:link {
    color: black;
}

h2 {
  text-align: center;
}

.display_main {
    text-align: center;
    font-size: 3em;
    margin-top: 7%;
}

.display_main form {
    margin-top: 3%;
    text-decoration: none; 
    font: menu; 
    display: inline-block; 
    padding: 2px 8px;
}

.display_main button {
  border: 1px solid #777777;
  background: #009999;
  color: white;
  font: bold;
  font-family: 'Ramabhadra', sans-serif;
  padding: .5e 2em .5em 2em;
  margin: 2em 4em 2em 4em;
  width: 200px;
  font-size: 25px;
  cursor: pointer;
  -moz-border-radius: 15px;
  -webkit-border-radius: 15px;
}

.display_main i {
    display: block;
    font-size: 50px;
}

.display_main a {
    color: #009999;
    font-weight: bold;
    text-decoration: none;
}

.display_main a:visited {
    color: #009999;
    text-decoration: none;
}

.display_refresh i {
    font-size: 100px;
}


.manage_form {
    background: -webkit-linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
    background: -moz-linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
    background: linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
    margin: auto;
    position: relative;
    width: 550px;
    height: 325px;
    font-size: 14px;
    line-height: 24px;
    color: #009999;
    text-decoration: none;
    border-radius: 10px;
    padding: 10px;
    border: 1px solid #999;
    border: inset 1px solid #333;
    -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
}

.manage_form input {
    width: 75%;
}

.manage_button {
  background-color: #fff;
  width: 375px;
  display: block;
  border: 1px solid #999;
  height: 25px;
  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
}

.manage_button:hover {
  background: #009999;
  color: #fff;
}

.manage_list_item {
    display: inline-block;
    width: 110px;
    padding: 20px;
    background-color: #97D0A7;
    border-radius: 10px;
    margin-top: 5px;
    margin-right: 5px;
    margin-left: 5px;
}

.manage_list_item p {
    text-align: center;
    color: black;
}

/*.del_contact a {
    text-decoration: none;
    height: 100%;
    vertical-align: bottom;
    color: black;
}
*/
/*.del_contact a:hover {
    color: red;
}*/

.manage_link_item {
    display: inline-block;
}

.manage_link_item img{
    max-height: 100px;
    vertical-align: bottom;
}

.manage_link_item a:link {
    text-decoration: none;
    color: black;
}

.manage_link_item a:hover {
    text-decoration: none;
    color: red;
}

.login_form: {
    background: -webkit-linear-gradient(bottom, #97D0A7, #FFFFFF 35px);
    background: -moz-linear-gradient(bottom, #97D0A7, #FFFFFF 35px);
    background: linear-gradient(bottom, #97D0A7, #FFFFFF 35px);
    color: #009999;
    width: 75%;
    margin: auto;
    border: 1px solid #999;
    border-radius: 5px;
}


.small_list_item {
    display: inline-block;
    width: 120px;
    height: 80px;
    padding: 10px;
    background-color: #97D0A7;
    border-radius: 6px;
    margin-top: 5px;
    margin-right: 5px;
    margin-left: 5px;
    line-height: 20px;
}

.small_list_item img{
    display: block;
    max-height: 60px;
    width: auto;
    height: auto;
    vertical-align: bottom;
    margin: auto;
}

.small_list_item p {
    text-align: center;
    color: black;
}

.small_list_item a {
    text-decoration: none;
    color: black;
    height: 100%;
    vertical-align: bottom;
}

.small_link_item {
    display: inline-block;
}

